Includes the pdf version

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -2,7 +2,9 @@
 title: "PA1_template.Rmd"
 author: "Chigo Chimoyo"
 date: "2023-05-25"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include = FALSE}
