--- a/PA1_template.tex
+++ b/PA1_template.tex
@@ -109,13 +109,12 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={PA1\_template.Rmd},
-  pdfauthor={Chigo Chimoyo},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
 \title{PA1\_template.Rmd}
-\author{Chigo Chimoyo}
-\date{2023-05-25}
+\author{}
+\date{\vspace{-2.5em}2023-05-25}
 
 \begin{document}
 \maketitle
